@@ -46,14 +46,13 @@ import java.util.ListIterator;
 
 import javax.swing.text.MutableAttributeSet;
 
-import org.piccolo2d.PCanvas;
-import org.piccolo2d.PLayer;
-import org.piccolo2d.PNode;
+import org.junit.Before;
+import org.junit.Test;
 import org.piccolo2d.activities.PActivity;
 import org.piccolo2d.activities.PColorActivity;
+import org.piccolo2d.activities.PColorActivity.Target;
 import org.piccolo2d.activities.PInterpolatingActivity;
 import org.piccolo2d.activities.PTransformActivity;
-import org.piccolo2d.activities.PColorActivity.Target;
 import org.piccolo2d.event.PBasicInputEventHandler;
 import org.piccolo2d.util.PAffineTransform;
 import org.piccolo2d.util.PAffineTransformException;
@@ -78,6 +77,7 @@ public class PNodeTest extends TestCase {
         super(name);
     }
 
+    @Before
     public void setUp() {
         node = new PNode();
         mockListener = new MockPropertyChangeListener();
@@ -90,6 +90,7 @@ public class PNodeTest extends TestCase {
         assertEquals(-40, node.getBoundsReference().getY(), 0);
     }
 
+    @Test
     public void testClientProperties() {
         final PNode n = new PNode();
 
@@ -148,13 +149,13 @@ public class PNodeTest extends TestCase {
         c.setBounds(0, 0, 100, 100);
         c.scale(200);
 
-        ArrayList found = new ArrayList();
+        ArrayList<PNode> found = new ArrayList<PNode>();
         final Rectangle2D rect2d = new Rectangle2D.Double(50, 50, 10, 10);
         n.findIntersectingNodes(rect2d, found);
 
         assertEquals(found.size(), 2);
         assertEquals(rect2d.getHeight(), 10, 0);
-        found = new ArrayList();
+        found = new ArrayList<PNode>();
 
         final PBounds bounds = new PBounds(50, 50, 10, 10);
         n.findIntersectingNodes(bounds, found);
@@ -550,14 +551,14 @@ public class PNodeTest extends TestCase {
     }
 
     public void testGetClientPropertyKeysEnumerationShouldReturnEnumarationOnNewNode() {
-        final Enumeration enumeration = node.getClientPropertyKeysEnumeration();
+        final Enumeration<?> enumeration = node.getClientPropertyKeysEnumeration();
         assertNotNull(enumeration);
         assertFalse(enumeration.hasMoreElements());
     }
 
     public void testGetClientPropertyKeysEnumerationShouldReturnCorrectEnumWhenPropertiesExist() {
         node.addAttribute("Testing", "Hello");
-        final Enumeration enumeration = node.getClientPropertyKeysEnumeration();
+        final Enumeration<?> enumeration = node.getClientPropertyKeysEnumeration();
         assertNotNull(enumeration);
         assertTrue(enumeration.hasMoreElements());
         assertEquals("Testing", enumeration.nextElement());
@@ -596,7 +597,7 @@ public class PNodeTest extends TestCase {
     }
 
     public void testGetIntegerAttributeReturnsValueIfFoundWhenDefaultProvided() {
-        node.addAttribute("Found", new Integer(5));
+        node.addAttribute("Found", Integer.valueOf(5));
         assertEquals(5, node.getIntegerAttribute("Found", 10));
     }
 
@@ -605,7 +606,7 @@ public class PNodeTest extends TestCase {
     }
 
     public void testGetDoubleAttributeReturnsValueIfFoundWhenDefaultProvided() {
-        node.addAttribute("Found", new Double(5));
+        node.addAttribute("Found", Double.valueOf(5));
         assertEquals(5, node.getIntegerAttribute("Found", 10), 0.001);
     }
 
@@ -1199,7 +1200,7 @@ public class PNodeTest extends TestCase {
     }
 
     public void testAddChildrenAddsAllChildren() {
-        final Collection newChildren = new ArrayList();
+        final Collection<PNode> newChildren = new ArrayList<PNode>();
         newChildren.add(new PNode());
         newChildren.add(new PNode());
         newChildren.add(new PNode());
@@ -1210,7 +1211,7 @@ public class PNodeTest extends TestCase {
     }
 
     public void testRemoveChildrenWorks() {
-        final Collection newChildren = new ArrayList();
+        final Collection<PNode> newChildren = new ArrayList<PNode>();
         newChildren.add(new PNode());
         newChildren.add(new PNode());
         newChildren.add(new PNode());
@@ -1222,7 +1223,7 @@ public class PNodeTest extends TestCase {
     }
 
     public void testGetAllNodesUnrollsTheNodeGraph() {
-        final Collection newChildren = new ArrayList();
+        final Collection<PNode> newChildren = new ArrayList<PNode>();
         newChildren.add(new PNode());
         newChildren.add(new PNode());
         newChildren.add(new PNode());
@@ -1262,7 +1263,7 @@ public class PNodeTest extends TestCase {
     }
 
     public void testGetChildrenIteratorReturnsIteratorEvenWithNoChildren() {
-        final ListIterator iterator = node.getChildrenIterator();
+        final ListIterator<PNode> iterator = node.getChildrenIterator();
         assertNotNull(iterator);
         assertFalse(iterator.hasNext());
     }
@@ -1271,7 +1272,7 @@ public class PNodeTest extends TestCase {
         final PNode child = new PNode();
         node.addChild(child);
 
-        final ListIterator iterator = node.getChildrenIterator();
+        final ListIterator<PNode> iterator = node.getChildrenIterator();
         assertNotNull(iterator);
         assertTrue(iterator.hasNext());
         assertEquals(child, iterator.next());
@@ -1293,7 +1294,7 @@ public class PNodeTest extends TestCase {
         node.addChild(new PNode());
         node.addChild(new PNode());
         node.addChild(new PNode());
-        final Collection nodes = node.getAllNodes(nullFilter, null);
+        final Collection<PNode> nodes = node.getAllNodes(nullFilter, null);
         assertNotNull(nodes);
         assertTrue(nodes.isEmpty());
     }
